tests/fail/invalid_decorator.stderr
error: expected identifier
 --> tests/fail/invalid_decorator.rs:3:12
  |
3 | #[decorate(123)] // Invalid decorator path
  |            ^^^
